# SchulteGrid

./: .clang-format  .gitignore  .gitmodules  AlgorithmRandom.cpp  AlgorithmRandom.h  CMakeLists.txt  Common.h  GameWidget.cpp  GameWidget.h  GameWidget.ui  LeveldbPimpl.cpp  LeveldbPimpl.h  MenuWidget.cpp  MenuWidget.h  MenuWidget.ui  NumRand.cpp  README.md  RandomShuffle.h  RecordWidget.cpp  RecordWidget.h  RecordWidget.ui  SchulteGrid.excalidraw  SchulteGrid.pro  SchulteGrid_RC.rc  SchulteGrid_resource.rc  UiSettings.qrc  Version.rc.in  VersionInfo.rc.in  WhichModeWidget.cpp  WhichModeWidget.h  WhichModeWidget.ui  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  ninemainui.cpp  ninemainui.h  ninemainui.ui  resources.qrc  selector.cpp  (+8 more)
SchulteGrid/: Algor.cpp  Algor.h  IconVersion.rc  SchulteGrid.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start.cpp  start.h  start.ui
UiSettings/: uisetting.qss
old_project/: READEME.md
old_project/old1/: Algor.cpp  Algor.h  IconVersion.rc  SchulteGrid.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start.cpp  start.h  start.ui
old_project/old2/: NumRand.h  SchulteGrid.pro  mainmenu.cpp  mainmenu.h  selector.ui  sixteengrid.h  sixteengrid.ui
old_project/old2/UiSettings/: uisetting.qss
resources/: style.css
